@@ -2,8 +2,9 @@ CHANGES
 
 1.0-beta12:
 
-		* listen to blockchain
-		* open blockexplorer to payment tx (#1, #2, #3), remove old tip.payment_txhash
+	* listen to blockchain
+	* open blockexplorer to payment tx (#1, #2, #3), remove old tip.payment_txhash
+	* parse chaintip confirmation comment
 
 1.0-beta11:
 
